<?xml version="1.0"?>
<package format="2">
  <name>arti_a_star_network_planner</name>
  <version>1.0.0</version>
  <description>The arti_a_star_network_planner package</description>


  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Muehlbacher</maintainer>
  <maintainer email="r.hoheneder@arti-robots.com">Raphael Hoheneder</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>arti_nav_core</build_depend>
  <build_depend>arti_nav_core_msgs</build_depend>
  <build_depend>arti_nav_core_utils</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>arti_ros_param</build_depend>
  <build_depend>arti_move_base_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>arti_graph_processing</build_depend>
  <build_depend>angles</build_depend>

  <build_export_depend>angles</build_export_depend>
  <build_export_depend>arti_nav_core</build_export_depend>
  <build_export_depend>arti_nav_core_msgs</build_export_depend>
  <build_export_depend>arti_nav_core_utils</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>arti_ros_param</build_export_depend>
  <build_export_depend>arti_move_base_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>arti_graph_processing</build_export_depend>
  <build_export_depend>angles</build_export_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>arti_nav_core</exec_depend>
  <exec_depend>arti_nav_core_msgs</exec_depend>
  <exec_depend>arti_nav_core_utils</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>arti_ros_param</exec_depend>
  <exec_depend>arti_move_base_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>arti_graph_processing</exec_depend>
  <exec_depend>angles</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <arti_nav_core plugin="${prefix}/network_planner_plugin.xml" />
  </export>
</package>
