<?xml version="1.0"?>
<package format="2">
  <name>arti_nav_core_costmap_2d_layers</name>
  <version>1.0.0</version>
  <description>The arti_nav_core_costmap_2d_layers package</description>

 
  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>

  <license>BSD</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arti_graph_processing</build_depend>
  <build_depend>arti_nav_core</build_depend>
  <build_depend>arti_nav_core_msgs</build_depend>
  <build_depend>arti_nav_core_utils</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_export_depend>arti_graph_processing</build_export_depend>
  <build_export_depend>arti_nav_core</build_export_depend>
  <build_export_depend>arti_nav_core_msgs</build_export_depend>
  <build_export_depend>arti_nav_core_utils</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>

  <exec_depend>arti_graph_processing</exec_depend>
  <exec_depend>arti_nav_core</exec_depend>
  <exec_depend>arti_nav_core_msgs</exec_depend>
  <exec_depend>arti_nav_core_utils</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
